# vr-project3

./: .gitignore  Cargo.toml  README.md
assets/: snow-block.blend  snowman.spp.painter_lock
assets/snowman/: snowman.blend1
doc/: project3-retrospective.tex
src/: app.rs  main.rs
